# VulcanDB

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml
.github/workflows/: auto-test.yaml
configs/: benchmark_config.yaml
docs/: ifc-intro.md
etc/: vulcan.ini
include/: DeflateTestRunner.h  TestRunnerInterface.h  TestUtil.h  ZipTestRunner.h
resources/source_files/Unreal Dataset/Duplex Apartment/: README.md
resources/source_files/Unreal Dataset/ifcModels/: 091210ISO9705revit9-c.ifc
src/: TestUtil.cpp  ZipTestRunner.cpp  main.cpp
src/backend/: CMakeLists.txt  db.h  main.cpp  pidfile.cpp  pidfile.h  server.cpp  server.h  session.cpp  session.h  vulcan_param.cpp  vulcan_param.h
src/backend/seda/: callback.cpp  callback.h  kill_thread_stage.cpp  kill_thread_stage.h  seda.ini  seda_config.cpp  seda_config.h  seda_defs.h  session_event.cpp  session_event.h  session_stage.cpp  session_stage.h  stage.cpp  stage.h  stage_event.cpp  stage_event.h  stage_factory.h  thread_pool.cpp  thread_pool.h  timeout_info.cpp  timeout_info.h
src/client/: CMakeLists.txt  main.cpp  vulcan_client.cpp  vulcan_client.h
src/cmdline/: cmdline.cpp
src/common/: CMakeLists.txt  class_factory.h  defs.h  globals.h  ini_parser.cpp  ini_parser.h  mutex.h  os.cpp  os.h  string.cpp  string.h  vulcan_logger.cpp  vulcan_logger.h  vulcan_os.h  vulcan_param.cpp  vulcan_param.h  vulcan_schema.cpp  vulcan_schema.h  vulcan_utility.cpp  vulcan_utility.h
src/common/io/: io.cpp  io.h  resp_protocol.cpp  resp_protocol.h  vulcan_file.h
src/compress_benchmark/: CMakeLists.txt  DeflateTestRunner.cpp  DeflateTestRunner.h  IfcCompressorTestRunner.cpp  IfcCompressorTestRunner.h  TestUtil.cpp  TestUtil.h  compress_benchmark.cpp  deflate_test_runner.cpp  deflate_test_runner.h  ifccompressor_test_runner.cpp  ifccompressor_test_runner.h  test_util.cpp  test_util.h
src/execution/: ifc_spc_loader.h
src/experiments/: CMakeLists.txt  test_util.cpp  test_util.h
src/experiments/compression_benchmark/: compress_benchmark.cpp  deflate_test_runner.cpp  deflate_test_runner.h  ifccompressor_test_runner.cpp  ifccompressor_test_runner.h
src/express_parser/: Makefile  express_defs.c  express_defs.h  express_parser.cpp  express_parser.h  express_parser_cli.cpp  express_parser_cli.h  lex_exp.l  yacc_exp.y
src/ifcparse/: CMakeLists.txt  IfcFile.h
src/storage/: CMakeLists.txt
src/storage/compression/: CompressorInterface.h  IfcCompressorImpl.cpp  IfcCompressorImpl.h  compressor_interface.h  ifccompressor_impl.cpp  ifccompressor_impl.h
src/storage/datastore/: DataStoreInterface.h  datastore_interface.h  wiredtiger_datastore_impl.cpp  wiredtiger_datastore_impl.h
tests/: CMakeLists.txt
tests/backend/: vulcan_param_test.cpp  vulcan_param_test.ini
tests/storage/: test_wiredtiger_datastore_impl.cpp
