include_directories(${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/tests ${CMAKE_SOURCE_DIR}/third_party)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)

file(GLOB_RECURSE TEST_DIRS LIST_DIRECTORIES true ${CMAKE_SOURCE_DIR}/tests/*)
set(TEST_EXECUTABLES)
foreach(TEST_DIR ${TEST_DIRS})
	if(IS_DIRECTORY ${TEST_DIR})
		file(GLOB_RECURSE TEST_SOURCES ${TEST_DIR}/*.cpp ${TEST_DIR}/*/*.cpp)
		if(${TEST_DIR} MATCHES "backend")
			file(GLOB_RECURSE BACKEND_SRC ${CMAKE_SOURCE_DIR}/src/backend/*.cpp)
			list(APPEND TEST_SOURCES ${BACKEND_SRC})
			list(REMOVE_ITEM TEST_SOURCES "${CMAKE_SOURCE_DIR}/src/backend/main.cpp")
		elseif(${TEST_DIR} MATCHES "client")
			file(GLOB_RECURSE CLIENT_SRC ${CMAKE_SOURCE_DIR}/src/client/*.cpp)
			list(REMOVE_ITEM TEST_SOURCES "${CMAKE_SOURCE_DIR}/src/client/main.cpp")
			list(APPEND TEST_SOURCES ${CMAKE_SOURCE_DIR}/src/client/*.cpp)
		endif()
		get_filename_component(TEST_NAME ${TEST_DIR} NAME)
		set(TEST_NAME "vulcan-test-${TEST_NAME}")
		add_executable(${TEST_NAME} ${TEST_SOURCES})
		target_link_libraries(${TEST_NAME} PRIVATE gtest gtest_main gmock gmock_main vulcan_core)
		add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
		message(STATUS "Adding test ${TEST_NAME}")
		list(APPEND TEST_EXECUTABLES ${TEST_NAME})
	endif()
endforeach()

# set(TEST_EXECUTABLE_OUTPUT )
# file(GLOB_RECURSE TEST_DATASTORE_SOURCES ./storage/*.cpp ./storage/*/*.cpp)
# add_executable(vulcan-test-storage ${TEST_DATASTORE_SOURCES})
# target_link_libraries(vulcan-test-storage PRIVATE gtest gtest_main vulcan_core)
# add_test(NAME vulcan-test-storage COMMAND vulcan-test-storage)
# set_tests_properties(vulcan-test-storage vulcan-test-storage PROPERTIES LABELS storage)

# file(GLOB_RECURSE TEST_BACKEND_SOURCES ./backend/*.cpp ./backend/*/*.cpp ${CMAKE_SOURCE_DIR}/src/backend/vulcan_param.cpp)
# add_executable(vulcan-test-backend ${TEST_BACKEND_SOURCES})
# target_link_libraries(vulcan-test-backend PRIVATE gtest gtest_main vulcan_core)
# add_test(NAME vulcan-test-backend COMMAND vulcan-test-backend)
# set_tests_properties(vulcan-test-backend vulcan-test-backend PROPERTIES LABELS backend)


